# Coupled_PCR-GLOBWB2-WOFOST_model_framework

./: README.md
Ini files/: Script_OW  Script_SA  Script_for_all_crops  my_script.sh  script_TW_final.py  script_TW_old.py  setup_conus_5arcmin.ini
PCR-GLOBWB2/model/: bmiPcrglobwb.py  configuration.py  crop_irrigation_functions.py  deterministic_runner.py  groundwater.py  landCover.py  landCover_old_irrigation.py  landSurface.py  meteo.py  ncConverter.py  ncview.dump  parameterSoilAndTopo.py  pcrglobwb.py  reporting.py  routing.py  spinUp.py  variable_list.py  virtualOS.py  waterBodies.py
PCR-GLOBWB2/model/config/: setup_bmi_only_irrnonpaddy_pcr_only_no_rain.py
PCR-GLOBWB2/model/evaporation/: hamonETPFunctions.py
WOFOST/: babel_wofostc.toml  environment.yml
WOFOST/WOFOSTBMI/: CMakeLists.txt
WOFOST/WOFOSTBMI/WOFOST/: .Output.c.swp  .wofost.h.swp  Afgen.c  CMakeLists.txt  Clean.c  Conversion.c  CropNutrientRates.c  Cropdata.c  Evtra.c  Fillvar.c  Growth.c  IfSowing.c  InitializeCrop.c  IntegrationNutrients.c  LeaveGrowth.c  Leaves.c  Meteodata.c  Moment.c  NutrientLoss.c  NutrientTranslocation.c  Nutrients.c  Penman.c  RateCalculationCrop.c  RatesToZero.c  Sitedata.c  Watfd.c  bmiwofostMaggyc.pc.cmake  bmiwofostc.pc.cmake  crop.h  list.txt  list_global.txt  list_sw.txt  list_ww.txt  meteo_ir_rb.txt  penman.h  site.h  wofostMaggyc.pc.cmake  wofostSupCode.c  wofostWS  wofost_bmi.c  (+2 more)
WOFOST/WOFOSTBMI/WOFOST/Parameters/Crop/: mag201.cab  soy0902.cab  soybean.cab  wwh107.cab
WOFOST/WOFOSTBMI/WOFOST/Parameters/Mask/mask_rb/: soybean_ir_rb.nc
WOFOST/WOFOSTBMI/WOFOST/Parameters/Mask/mask_rb/backfiles/: maize.nc  maize1.nc  maize_rf.nc  soybean.nc  soybean_box_ir_rb.nc  soybean_box_rf_rb.nc
WOFOST/WOFOSTBMI/WOFOST/Parameters/Site/: France.site  Zambia.site  rb.site
WOFOST/WOFOSTBMI/WOFOST/Parameters/Soil/: ec2.new  ec5.new
WOFOST/WOFOSTBMI/_build/: Makefile  cmake_install.cmake  install_manifest.txt
WOFOST/WOFOSTBMI/_build/WOFOST_Maggy/: cmake_install.cmake  wofostMaggyc.pc
WOFOST/WOFOSTBMI_Maggy/: CMakeLists.txt
WOFOST/WOFOSTBMI_Maggy/WOFOST_Maggy/: .Evtra.c.swp  .NutritionIndex.c.swp  Assim.c  Astro.c  DM-Partioning.c  Develop.c  Functions.c  GetMeteoInput.c  GetSimInput.c  InitializeNutrients.c  IntegrationCrop.c  Lai.c  List.c  Management.c  NutrientPartitioning.c  NutritionIndex.c  Output.c  Respiration.c  SimData.c  SoilNutrientRates.c  Soildata.c  astro.h  bmiwofostc.out  copy_dmy.c  extern.h  list_sb.txt  makefile  manage.h  output.csv  soil.h  wofost.h  wofost_copy_library.c
WOFOST/WOFOSTBMI_Maggy/WOFOST_Maggy/Parameters/Crop/: soy-argentina.cab  wwh102.cab
WOFOST/WOFOSTBMI_Maggy/WOFOST_Maggy/Parameters/Mask/mask_rb/: maize_ir_rb.nc  maize_rf_rb.nc  soybean_rf_rb.nc
WOFOST/WOFOSTBMI_Maggy/WOFOST_Maggy/Parameters/Mask/mask_rb/backfiles/: maize_ir.nc  soybean_box_rb.nc
WOFOST/WOFOSTBMI_Maggy/WOFOST_Maggy/Parameters/Soil/: ec1.new  ec3.new  ec4.new
WOFOST/WOFOSTBMI_Maggy/_build/: CMakeCache.txt
WOFOST/WOFOSTBMI_Maggy/_build/WOFOST_Maggy/: Makefile  run_bmiwofostMaggyc
WOFOST/pymt_wofost/: CHANGES.rst  CREDITS.rst  Makefile  README.rst  babel.toml  pyproject.toml  requirements-build.txt
WOFOST/pymt_wofost/docs/: Makefile  conf.py  index.rst  installation.rst
WOFOST/pymt_wofost/meta/WOFOST_MaizeTW/: api.yaml
WOFOST/pymt_wofost/pymt_wofost/: __init__.py  bmi.py
WOFOST/pymt_wofost/pymt_wofost/lib/: __init__.py  wofost_maizetw.c  wofost_maizetw.pyx
WOFOST/pymt_wofost/recipe/: meta.yaml
